--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/authify_app
-spring.datasource.username=root
-spring.datasource.password=Prasha@1523
+spring.datasource.url=jdbc:mysql://localhost:3306/{DATABASE_NAME}
+spring.datasource.username={MYSQL.USERNAME} //root or anything you have put on MySQL username
+spring.datasource.password={MYSQL.PASSWORD} //root or admin or anything you have to put on MySQL password
 
 spring.jpa.hibernate.ddl-auto=update
-jwt.secret.key=thisisthesecretkeygeneratedinmydevelopementcareer
+jwt.secret.key={USE YOUR SECRET KEY}
 
 server.servlet.context-path=/api/v1.0
 
 spring.mail.host=smtp-relay.brevo.com
-spring.mail.port=587
-spring.mail.username=8f340f001@smtp-brevo.com
-spring.mail.password=w0cdg7U3IXLG6F5A
+spring.mail.port={BREVO_PORT}
+spring.mail.username={BREVO_USERNAME}
+spring.mail.password={BREVO_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
-spring.mail.properties.mail.smtp.from=prajjwalupadhyay15@gmail.com
+spring.mail.properties.mail.smtp.from={BREVO_MAIL}
