--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/{DATABASE_NAME}
-spring.datasource.username={MYSQL.USERNAME} //root or anything you have put on MySQL username
-spring.datasource.password={MYSQL.PASSWORD} //root or admin or anything you have to put on MySQL password
+server.port=${PORT:8080}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
 
 spring.jpa.hibernate.ddl-auto=update
 jwt.secret.key={USE YOUR SECRET KEY}
