--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,19 +1,20 @@
 server.port=${PORT:8080}
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
 
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
-jwt.secret.key={USE YOUR SECRET KEY}
+
+jwt.secret.key=${JWT_SECRET}
 
 server.servlet.context-path=/api/v1.0
 
 spring.mail.host=smtp-relay.brevo.com
-spring.mail.port={BREVO_PORT}
-spring.mail.username={BREVO_USERNAME}
-spring.mail.password={BREVO_PASSWORD}
+spring.mail.port=${BREVO_PORT}
+spring.mail.username=${BREVO_USERNAME}
+spring.mail.password=${BREVO_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
-spring.mail.properties.mail.smtp.from={BREVO_MAIL}
+spring.mail.properties.mail.smtp.from=${BREVO_MAIL}
