--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=${PORT:8080}
 
-spring.datasource.url=${{ MySQL.MYSQL_URL }}
-spring.datasource.username=${MYSQLUSER}
-spring.datasource.password=${MYSQLPASSWORD}
+spring.datasource.url=mysql://root:DeiFAyZApVSBtFhOkejPkgRLbLtTaoKb@mysql.railway.internal:3306/railway
+spring.datasource.username=root
+spring.datasource.password=DeiFAyZApVSBtFhOkejPkgRLbLtTaoKb
 
 spring.jpa.hibernate.ddl-auto=update
 
