--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,20 +1,22 @@
+# Server Configuration
 server.port=${PORT:8080}
-
-spring.datasource.url=mysql://root:DeiFAyZApVSBtFhOkejPkgRLbLtTaoKb@mysql.railway.internal:3306/railway
-spring.datasource.username=root
-spring.datasource.password=DeiFAyZApVSBtFhOkejPkgRLbLtTaoKb
-
-spring.jpa.hibernate.ddl-auto=update
-
-jwt.secret.key=${JWT_SECRET}
-
 server.servlet.context-path=/api/v1.0
 
-spring.mail.host=smtp-relay.brevo.com
-spring.mail.port=${BREVO_PORT}
-spring.mail.username=${BREVO_USERNAME}
-spring.mail.password=${BREVO_PASSWORD}
+# Database Configuration
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+
+# JWT Configuration
+jwt.secret.key=${JWT_SECRET}
+
+# Mail Configuration
+spring.mail.host=${MAIL_HOST:smtp-relay.brevo.com}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
-spring.mail.properties.mail.smtp.from=${BREVO_MAIL}
+spring.mail.properties.mail.smtp.from=${MAIL_FROM}
